--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6{
     flex-wrap: wrap;
     justify-content: center;
 }
+/* .display-grid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+} */
 h1{
     font-size: 1.8em;
 }
